Criação das das Views, Services, Repositories, Controllers, etc...

--- a/web/index.html
+++ b/web/index.html
@@ -38,6 +38,10 @@
   </script>
   <!-- This script adds the flutter initialization JS code -->
   <script src="flutter.js" defer></script>
+
+  <!-- packages -->
+  <script src="https://maps.googleapis.com/maps/api/js?key=key"></script>
+  
 </head>
 <body>
   <script>
